@@ -2,10 +2,10 @@ package com.example.cost.entity;
 
 import jakarta.persistence.*;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 @Entity
@@ -24,51 +24,45 @@ public class User implements UserDetails {
 
     private String username;
 
+    // ── role: "USER" (default) or "ADMIN" ──────────────────────
+    @Column(nullable = false)
+    private String role = "USER";
+    // ───────────────────────────────────────────────────────────
+
     public User() {}
 
     public User(String email, String password, String username) {
         this.email = email;
         this.password = password;
         this.username = username;
+        this.role = "USER";
     }
 
-//    @OneToMany(mappedBy = "user", cascade = CascadeType.ALL, orphanRemoval = true)
-//    private List<CalculForm> calculForms;
-
     public Long getId() { return id; }
+
     public String getEmail() { return email; }
     public void setEmail(String email) { this.email = email; }
+
     public String getPassword() { return password; }
     public void setPassword(String password) { this.password = password; }
+
     public String getDisplayName() { return username; }
     public void setUsername(String username) { this.username = username; }
 
+    public String getRole() { return role; }
+    public void setRole(String role) { this.role = role; }
+
+    // Spring Security: expose role as GrantedAuthority
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // pas de rôles ici
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role));
     }
 
     @Override
-    public String getUsername() {
-        return email; // identifiant utilisé pour login
-    }
-//    public List<CalculForm> getCalculForms() {
-//        return calculForms;
-//    }
-//
-//    public void setCalculForms(List<CalculForm> calculForms) {
-//        this.calculForms = calculForms;
-//    }
+    public String getUsername() { return email; }
 
-    @Override
-    public boolean isAccountNonExpired() { return true; }
-
-    @Override
-    public boolean isAccountNonLocked() { return true; }
-
-    @Override
-    public boolean isCredentialsNonExpired() { return true; }
-
-    @Override
-    public boolean isEnabled() { return true; }
+    @Override public boolean isAccountNonExpired()     { return true; }
+    @Override public boolean isAccountNonLocked()      { return true; }
+    @Override public boolean isCredentialsNonExpired() { return true; }
+    @Override public boolean isEnabled()               { return true; }
 }
